<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bungee_inline"
        android:text="@string/signup"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_name_ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_profile" />

    <EditText
        android:id="@+id/password_ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/email_ed"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/email_ed"
        app:layout_constraintTop_toBottomOf="@+id/email_ed" />

    <EditText
        android:id="@+id/confirm_pass_ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/password_ed"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/password_ed"
        app:layout_constraintTop_toBottomOf="@+id/password_ed" />

    <Button
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="@+id/confirm_pass_ed"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/confirm_pass_ed"
        app:layout_constraintTop_toBottomOf="@+id/confirm_pass_ed" />

    <TextView
        android:id="@+id/login_activity_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/hyperlink_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/create_account"
        app:layout_constraintStart_toStartOf="@+id/create_account"
        app:layout_constraintTop_toBottomOf="@+id/create_account"
        app:layout_constraintVertical_bias="0.135" />

    <EditText
        android:id="@+id/email_ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/user_name_ed"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/user_name_ed"
        app:layout_constraintTop_toBottomOf="@+id/user_name_ed" />

    <Button
        android:id="@+id/image_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/circle"
        android:text="@string/select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@android:color/white"
        android:id="@+id/circle_image_view"
        app:layout_constraintBottom_toBottomOf="@+id/image_profile"
        app:layout_constraintEnd_toEndOf="@+id/image_profile"
        app:layout_constraintStart_toStartOf="@+id/image_profile"
        app:layout_constraintTop_toTopOf="@+id/image_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>